--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "angular-test",
   "version": "0.0.0",
   "engines": {
-    "node": "12.x"
+    "node": "12.x",
+    "npm": "6.x"
   },
   "scripts": {
     "ng": "ng",
