--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "@angular/platform-browser-dynamic": "~9.1.11",
     "@angular/router": "~9.1.11",
     "bootstrap": "^4.3.1",
+    "chart.js": "^2.9.3",
     "core-js": "^2.5.4",
     "express": "^4.17.1",
     "hammerjs": "^2.0.8",
+    "ng2-charts": "^2.2.4",
     "path": "^0.12.7",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
